# spotify-mcp-poke

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
src/spotify_mcp/: auth.py  server.py
