[project]
name = "spotify-mcp-poke"
version = "0.1.0"
description = "Spotify MCP server for Poke — check what's playing, search tracks, and queue up vibes"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "spotify", "poke", "llm"]
dependencies = [
    "fastmcp",
    "spotipy",
    "uvicorn",
    "poke",
    "python-dotenv",
]

[project.urls]
Repository = "https://github.com/JaidenRatti/spotify-mcp-poke"

[dependency-groups]
dev = [
    "ruff",
]

[project.scripts]
spotify-mcp-poke = "spotify_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_mcp"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
